# advent_of_code_2022

./: .gitignore  CMakeLists.txt
day1/: CMakeLists.txt  day1.cpp  day1.h
day2/: CMakeLists.txt  day2.cpp  day2.h
day3/: CMakeLists.txt  day3.cpp  day3.h
day4/: CMakeLists.txt  day4.cpp  day4.h
day5/: CMakeLists.txt  day5.cpp  day5.h
